# EpicKinectVRThingy

./: CMakeLists.txt  DeviceFactory.cpp  DeviceProvider.cpp  DeviceProvider.h  NiteSampleUtilities.h  driver.vrdrivermanifest  left_controller_profile.json  library.cpp  library.h  right_controller_profile.json
ControllerDrivers/: LeftControllerDriver.cpp  LeftControllerDriver.h  RightControllerDriver.cpp  RightControllerDriver.h
Driver/: ControllerDevice.cpp  ControllerDevice.h  DeviceType.h  IVRDevice.h  IVRDriver.h  VRDriver.cpp  VRDriver.h
Native/: DriverFactory.cpp  DriverFactory.h
old/ControllerDrivers/: LeftControllerDriver.h  RightControllerDriver.cpp  RightControllerDriver.h
old/ControllerDrivers/native/: DeviceFactory.cpp  DeviceProvider.cpp  DeviceProvider.h
test/: EpicKinectVRThingyTest.cpp
